--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-This is just a testing area :D
+=========================
+NIXOS INSTALLATION NOTES
+=========================
+
+mkfs.btrfs /dev/vda2
+mount /dev/vda2 /mnt
+btrfs create subvolume /mnt/home
+btrfs create subvolume /mnt/root
+umount /mnt
+
+mkdir /mnt/boot
+mkdir /mnt/home
+
+mount -o compress=zstd,subvol=root /dev/vda2 /mnt
+mount -o compress=zstd,subvol=home /dev/vda2 /mnt/home
+
+mount /dev/vda1 /mnt/boot
+
+nixos-generate-config --root /mnt
+"EDIT"
+
+nixos-install
