--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-=========================
-NIXOS INSTALLATION NOTES
-=========================
+<b>NIXOS INSTALLATION NOTES</b>
 
 mkfs.btrfs /dev/vda2
 mount /dev/vda2 /mnt
