--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>
 <b>NIXOS INSTALLATION NOTES</b>
+mkfs.btrfs /dev/vda2
+mount /dev/vda2 /mnt
+btrfs create subvolume /mnt/home
+btrfs create subvolume /mnt/root
+umount /mnt
+
+mkdir /mnt/boot
+mkdir /mnt/home
+
+mount -o compress=zstd,subvol=root /dev/vda2 /mnt
+mount -o compress=zstd,subvol=home /dev/vda2 /mnt/home
+
+mount /dev/vda1 /mnt/boot
+
+nixos-generate-config --root /mnt
+"EDIT"
+
+nixos-install
+</p>
+
+</body>
+</html> 
